Service card. Container Fix.
Added more HTML to the service cards section of the page. Applied more media queries to service card containers to make all containers sit correctly in all viewports. Fixed container misalignment that was effecting certain viewport's. Tested in different browsers to make sure fix applies properly.

--- a/css/styles.css
+++ b/css/styles.css
@@ -854,8 +854,6 @@ header img {
 @media (min-width: 767px) {
   .service-container-small {
     width: 50%;
-    padding-left: 15px;
-    padding-right: 15px;
   }
 }
 @media (min-width: 992px) {
@@ -866,6 +864,36 @@ header img {
 @media (min-width: 1260px) {
   .service-container-small {
     width: 25%;
+  }
+}
+
+@media (min-width: 767px) {
+  .service-small-1, .service-small-3 {
+    padding-right: 15px;
+  }
+}
+
+@media (min-width: 767px) {
+  .service-small-2, .service-small-4 {
+    padding-left: 15px;
+  }
+}
+
+@media (min-width: 992px) {
+  .service-small-1, .service-small-3 {
+    padding-left: 15px;
+  }
+}
+
+@media (min-width: 992px) {
+  .service-small-2, .service-small-4 {
+    padding-right: 15px;
+  }
+}
+
+@media (min-width: 1260px) {
+  .service-small-4 {
+    padding-right: 13px;
   }
 }
 
